added new route documentation for the hash based renewal of certs
