# storage/api-docs/api-docs.json
@@ -4,6 +4,7 @@
         "title": "Certbot API",
         "version": "0.1"
     },
+    "basePath": "",
     "paths": {
         "/api/acme/accounts": {
             "get": {
@@ -942,6 +943,58 @@
                 ]
             }
         },
+        "/api/acme/accounts/{account_id}/certificates/{certificate_id}/pem/refresh": {
+            "get": {
+                "tags": [
+                    "Acme Certificates"
+                ],
+                "summary": "Download certificate, chain, and private key PEM encoded using an existing private key hash",
+                "description": "",
+                "operationId": "certificateDownloadPEMviaHash",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/x-pem-file"
+                ],
+                "parameters": [
+                    {
+                        "name": "account_id",
+                        "in": "path",
+                        "description": "ID of account",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "certificate_id",
+                        "in": "path",
+                        "description": "ID of certificate",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "keyhash",
+                        "in": "query",
+                        "description": "MD5 hash of certs private key",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                },
+                "security": [
+                    {
+                        "token": []
+                    }
+                ]
+            }
+        },
         "/api/authenticate": {
             "get": {
                 "tags": [
@@ -1853,6 +1906,10 @@
                 },
                 "authprovider": {
                     "description": "provider for authtype http path or dns provider",
+                    "type": "string"
+                },
+                "authaccount": {
+                    "description": "account id for auth providers requiring authentication",
                     "type": "string"
                 },
                 "authuser": {
